# magent

./: .env.example  .render.yaml  DEPLOYMENT_TEST_RESULTS.md  Dockerfile  Makefile  README.md  RENDER_DEPLOY.md  docker-compose.simple-test.yaml  docker-compose.test.yaml  pyproject.toml  render.yaml  requirements.txt  requirements.yaml
data/vectorstore/: chroma.sqlite3
docs/: CANONICAL-STRUCTURE.yaml  PHASED-IMPLEMENTATION.yaml  ai-agent-implementation-guide-part2.yaml  ai-agent-implementation-guide-part3.yaml  ai-agent-implementation-guide.yaml  external-dependencies.yaml  implementation-files.yaml  implementation-gaps.yaml  naming-conventions.yaml  project-structure.yaml  test-templates.yaml
docs/design/: architecture.yaml
docs/development/: coding-standards.yaml
docs/infrastructure/: local-k8s-setup.yaml
infrastructure/docker/: Dockerfile  docker-compose.yaml
infrastructure/huggingface/: README.md  app.py  requirements.txt
infrastructure/kubernetes/base/: app-deployment.yaml  chromadb-statefulset.yaml  configmap.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  ollama-statefulset.yaml  pvc.yaml  rbac.yaml  secret.yaml
infrastructure/kubernetes/overlays/dev/: kustomization.yaml
infrastructure/kubernetes/overlays/prod/: kustomization.yaml
infrastructure/kubernetes/tests/: kustomization.yaml  test-job.yaml
infrastructure/multipass/: cloud-init.yaml
infrastructure/podman/: Containerfile  podman-compose.yaml
infrastructure/render/: Dockerfile.chroma  Dockerfile.ollama  Dockerfile.web  README.md  render.yaml
infrastructure/terraform/: main.tf  variables.tf
infrastructure/terraform/environments/dev/: main.tf
infrastructure/terraform/modules/kubernetes/: main.tf  outputs.tf  variables.tf
scripts/: export_docs.py  seed_data.py  setup-local-k8s.sh
src/research_assistant/: __init__.py  cli.py
src/research_assistant/agents/: __init__.py  base.py  critic.py  researcher.py  supervisor.py  writer.py
src/research_assistant/config/: __init__.py  prompts.py  settings.py
src/research_assistant/core/: __init__.py  exceptions.py  schemas.py
src/research_assistant/graph/: __init__.py  nodes.py  state.py  workflow.py
src/research_assistant/services/: __init__.py  document_service.py  embeddings.py  llm_service.py  vector_store.py
src/research_assistant/tools/: __init__.py  document.py  search.py
src/research_assistant/ui/: __init__.py  app.py  components.py
src/research_assistant/ui/pages/: 1_Chat.py  2_Documents.py  3_Settings.py
src/student_research_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py
tests/fixtures/: sample_document.txt  test_questions.json
tests/integration/: test_agent_workflow.py  test_rag_pipeline.py
tests/unit/: test_agents.py  test_document_service.py  test_embeddings.py  test_schemas.py  test_settings.py  test_vector_store.py  test_workflow.py
