# ============================================================================
# PROJECT CONFIGURATION - pyproject.toml
# ============================================================================
# Student Research Assistant - Multi-Agent AI Application
# ============================================================================

[project]
name = "student-research-assistant"
version = "1.0.0"
description = "A multi-agent AI research assistant for students using LangGraph, LangChain, and vector databases"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = [
    "langchain",
    "langgraph",
    "multi-agent",
    "research",
    "rag",
    "vector-database",
    "ollama",
    "chromadb",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# ============================================================================
# DEPENDENCIES
# ============================================================================
dependencies = [
    # -------------------------------------------------------------------------
    # LLM Framework - LangChain
    # -------------------------------------------------------------------------
    "langchain>=0.3.0",              # Core LangChain framework
    "langchain-community>=0.3.0",    # Community integrations
    "langchain-core>=0.3.0",         # Core abstractions
    "langchain-text-splitters>=0.3.0", # Document chunking

    # -------------------------------------------------------------------------
    # Agent Orchestration - LangGraph
    # -------------------------------------------------------------------------
    "langgraph>=0.2.0",              # Multi-agent workflow orchestration

    # -------------------------------------------------------------------------
    # LLM Provider - Ollama (Local)
    # -------------------------------------------------------------------------
    "langchain-ollama>=0.2.0",       # Ollama integration for LangChain
    "ollama>=0.3.0",                 # Ollama Python client

    # -------------------------------------------------------------------------
    # Vector Database - ChromaDB
    # -------------------------------------------------------------------------
    "chromadb>=0.4.0",               # Vector database

    # -------------------------------------------------------------------------
    # Embeddings
    # -------------------------------------------------------------------------
    "sentence-transformers>=2.2.0",  # Local embedding models

    # -------------------------------------------------------------------------
    # Document Processing
    # -------------------------------------------------------------------------
    "pypdf>=4.0.0",                  # PDF text extraction
    "python-docx>=1.0.0",            # Word document support (optional)
    "unstructured>=0.10.0",          # Advanced document parsing (optional)

    # -------------------------------------------------------------------------
    # User Interface - Streamlit
    # -------------------------------------------------------------------------
    "streamlit>=1.28.0",             # Web UI framework

    # -------------------------------------------------------------------------
    # Configuration & Utilities
    # -------------------------------------------------------------------------
    "pydantic>=2.0.0",               # Data validation
    "pydantic-settings>=2.0.0",      # Settings management
    "python-dotenv>=1.0.0",          # Environment variable loading
    "pyyaml>=6.0.0",                 # YAML configuration

    # -------------------------------------------------------------------------
    # Async Support
    # -------------------------------------------------------------------------
    "aiofiles>=23.0.0",              # Async file operations
    "httpx>=0.25.0",                 # Async HTTP client

    # -------------------------------------------------------------------------
    # Utilities
    # -------------------------------------------------------------------------
    "rich>=13.0.0",                  # Rich terminal output
    "tenacity>=8.0.0",               # Retry logic
    "structlog>=23.0.0",             # Structured logging
]

# ============================================================================
# OPTIONAL DEPENDENCIES
# ============================================================================
[project.optional-dependencies]
# Development dependencies
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",         # Parallel test execution

    # Code Quality
    "black>=24.0.0",                # Code formatter
    "ruff>=0.1.0",                  # Fast linter
    "mypy>=1.7.0",                  # Type checker
    "isort>=5.12.0",                # Import sorter

    # Pre-commit
    "pre-commit>=3.6.0",

    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

# Production dependencies (additional)
prod = [
    "gunicorn>=21.0.0",             # WSGI server
    "prometheus-client>=0.19.0",    # Metrics
]

# All optional dependencies
all = [
    "student-research-assistant[dev,prod]",
]

# ============================================================================
# SCRIPTS / CLI COMMANDS
# ============================================================================
[project.scripts]
research-assistant = "research_assistant.cli:main"
ra-ingest = "research_assistant.cli:ingest"
ra-query = "research_assistant.cli:query"

# ============================================================================
# BUILD SYSTEM
# ============================================================================
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["research_assistant*"]

[tool.setuptools.package-data]
research_assistant = ["py.typed", "config/*.yaml"]

# ============================================================================
# BLACK - CODE FORMATTER
# ============================================================================
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | __pycache__
)/
'''

# ============================================================================
# RUFF - LINTER
# ============================================================================
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by black)
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004"]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["research_assistant"]

# ============================================================================
# MYPY - TYPE CHECKER
# ============================================================================
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true

# Per-module overrides
[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "langchain.*",
    "langgraph.*",
    "sentence_transformers.*",
    "streamlit.*",
    "ollama.*",
]
ignore_missing_imports = true

# ============================================================================
# PYTEST - TESTING
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",                    # Show extra test summary
    "-q",                     # Quiet mode
    "--strict-markers",       # Strict marker validation
    "--strict-config",        # Strict config validation
    "-v",                     # Verbose
    "--tb=short",             # Short traceback
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ============================================================================
# COVERAGE - TEST COVERAGE
# ============================================================================
[tool.coverage.run]
source = ["src/research_assistant"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/config/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@abstractmethod",
]
fail_under = 80
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# ISORT - IMPORT SORTER
# ============================================================================
[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["research_assistant"]
skip_gitignore = true

# ============================================================================
# BANDIT - SECURITY LINTER (optional)
# ============================================================================
[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101"]  # Skip assert warnings
